# aligndx

./: .env.template  .gitignore  README.MD  changes_for_deployment.txt  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  makefile  notes.txt  package-lock.json  package.json
app/: .dockerignore  (+3 more)
backend/: Dockerfile  Dockerfile.prod  pyproject.toml  start-reload.sh  start.sh
backend/app/: alembic.ini  main.py  prestart.sh
backend/app/api/routers/: metadata.py  payments.py  sockets.py  submissions.py  submissons.py  uploads.py  users.py  workflows.py
backend/app/api_v1/routers/: socket_resources.py  uploads.py
backend/app/auth/: auth_dependencies.py  models.py
backend/app/celery/: File.py  __init__.py  celeryconfig.py  config.py  tasks.py
backend/app/celery/io/: FileIO.py
backend/app/celery/model/: FileModel.py
backend/app/celery/redis/: base.py  functions.py
backend/app/celery/state/: ChunkState.py
backend/app/config/: settings.py
backend/app/core/config/: settings.py
backend/app/core/db/: base.py  session.py
backend/app/core/utils/: utilities.py
backend/app/db/: base.py  session.py
backend/app/db/alembic/: env.py
backend/app/db/dals/: base_dal.py  submissions.py  users.py
backend/app/db/tables/: submissions.py
backend/app/flows/: main.py
backend/app/metadata/: nxf.conf  pipelines.json
backend/app/models/: enums.py  jobs.py  phi_logs.py  redis.py  shared.py  status.py  stores.py  submissions.py  users.py  workflows.py
backend/app/models/payments/: __init__.py  customers.py  invoices.py  plans.py  settings_page.py  subscriptions.py
backend/app/redis/: functions.py
backend/app/routers/: celery.py  metadata.py  results.py  socket_resources.py  sockets.py  submissons.py  uploads.py  users.py
backend/app/services/: customer_service.py  db.py  invoice_service.py  plans_service.py  stripe_service.py
backend/app/storages/: local_storage.py  storage_manager.py
backend/app/tasks/: __init__.py  config.py  old_tasks.py  tasks.py
backend/app/utils/: utilities.py
backend/data/metadata/: draft_pipelines.json  panels.csv  pipelines.json
backend/docker/api/: Dockerfile
backend/docker/celery_worker/: Dockerfile
backend/docker/flower/: Dockerfile
backend/metadata/: pipelines.json
backend/tests/: conftest.py
proxy/nginx/: Dockerfile  Dockerfile.prod  pyproject.toml  site.conf.tpl
proxy/nginx/confs/: local.conf  options-ssl-nginx.conf
(+924 files in other folders)
