[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Various APIs and core services for aligndx"
authors = ["Manjot <manjothunjan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "1.7.7"
asyncpg = "0.25.0"
celery = {extras = ["redis"], version = "^5.2.7"}
fastapi = "0.85.0"
numpy = "1.22.3"
pandas = "1.4.1"
passlib = "1.7.4"
python-multipart = "0.0.5"
SQLAlchemy = "1.4.32"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
gdown = "4.4.0"
gunicorn = "^20.1.0"
stripe = "2.67.0"
pytest = "7.1.0"
beautifulsoup4 = "4.10.0"
aiofiles = "0.8.0"
redis = "^4.3.4"
flower = "^1.2.0"
python-jose = "^3.3.0"
prefect = "^2.4.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
black = "22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
