[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Various APIs and core services for aligndx"
authors = ["Manjot <manjothunjan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "1.9.2"
asyncpg = "0.25.0"
celery = {extras = ["redis"], version = "^5.2.7"}
fastapi = "0.85.0"
numpy = "1.22.3"
pandas = "1.4.1"
passlib = "1.7.4"
python-multipart = "0.0.5"
SQLAlchemy = "1.4.32"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
gunicorn = "^20.1.0"
stripe = "2.67.0"
redis = "^4.3.4"
flower = "^1.2.0"
python-jose = "^3.3.0"
docker = "^6.0.1"
plotly = "^5.13.0"
nbconvert = "^7.2.9"
nbformat = "^5.7.3"
papermill = "^2.4.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
black = "^23.1.0"
pytest = "^7.2.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
psycopg2-binary = "^2.9.5"

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
psycopg2 = "^2.9.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
