[tool.poetry]
name = "reports"
version = "0.1.0"
description = ""
authors = ["mshunjan <manjothunjan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlite-core = "^0.1.2"
jupyterlite-pyodide-kernel = "^0.1.3"
jupyterlab-open-url-parameter = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
